# michi

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.zig  flake.nix  range_image_visualize.jl  rs-pcl-color.cpp  sim_socket.patch  sim_socket_aruco.patch  use_serial.patch
lib/: ardupilot_interface.cpp  ardupilot_interface.hpp  arrow_global_planner.hpp  arrow_state_machine.hpp  aruco_detector.hpp  classification_model.hpp  common.hpp  goal.hpp  mobilenet_arrow.cpp  mobilenet_arrow.hpp  realsense_generator.cpp  realsense_generator.hpp  state.hpp  yolov8_arrow.cpp  yolov8_arrow.hpp
tests/: test_ardupilot_interface.cpp  test_aruco_detector.cpp  test_mobilenet_arrow.cpp  test_realsense_generator.cpp  test_yolov8_arrow.cpp
